--- a/my-react-app/src/App.module.css
+++ b/my-react-app/src/App.module.css
@@ -3,18 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Village";
-  src: url("./static/fonts/Village-wLn3.ttf");
-}
-
-@font-face {
   font-family: "Upheaval";
   src: url("./static/fonts/upheavtt.ttf");
-}
-
-@font-face {
-  font-family: "Birch";
-  src: url("./static/fonts/Birch\ Regular.otf");
 }
 
 @font-face {
@@ -28,13 +18,33 @@
 }
 
 @font-face {
-  font-family: "Omori1";
-  src: url("./static/fonts/OMORI_GAME.ttf");
+  font-family: "Omori";
+  src: url("./static/fonts/OMORI_GAME2.ttf");
 }
 
 @font-face {
-  font-family: "Omori2";
-  src: url("./static/fonts/OMORI_GAME2.ttf");
+  font-family: "Oxygen";
+  src: url("./static/fonts/Oxygen-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Quicksand";
+  src: url("./static/fonts/Quicksand-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Sacramento";
+  src: url("./static/fonts/Sacramento-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Greycliff";
+  src: url("./static/fonts/Fontspring-DEMO-greycliffcf-heavy.otf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("./static/fonts/Montserrat-VariableFont_wght.ttf");
 }
 
 .appContainer {
