--- a/my-react-app/src/components/Button.css
+++ b/my-react-app/src/components/Button.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 .green {
-  @apply mt-6 rounded-3xl w-36 px-4 py-2 text-[#576733] hover:bg-[#cfd9b7] border-2 border-[#afbc91] font-quicksand font-bold text-sm mr-4;
+  @apply mt-6 rounded-3xl w-36 px-4 py-2 text-[#576733] hover:bg-[#cfd9b7] border-2 border-[#cfd9b7] font-quicksand font-bold text-sm mr-4;
+}
+
+.speechContinue {
+  @apply rounded-3xl bg-[#f4f4f5] px-4 py-2 text-[#576733] hover:bg-[#cfd9b7] font-quicksand font-bold text-sm;
+}
+
+.submit {
+  @apply rounded-3xl bg-white px-4 py-2 text-[#576733] opacity-75 hover:opacity-100 font-quicksand font-bold text-lg;
 }
