--- a/my-react-app/src/pages/contacts.module.css
+++ b/my-react-app/src/pages/contacts.module.css
@@ -15,7 +15,7 @@
 }
 
 .container2 {
-  @apply w-3/4 h-auto inline-block py-6 px-10 ml-10 bg-[#dfeaf0] rounded-3xl font-quicksand text-xl;
+  @apply w-3/4 h-auto inline-block py-6 px-10 ml-10 bg-[#e3e8d8] rounded-3xl font-quicksand text-xl;
 }
 
 .container3 {
@@ -31,11 +31,11 @@
 }
 
 .big {
-  @apply font-cotton text-7xl;
+  @apply font-cotton text-7xl text-[#404040];
 }
 
 .small {
-  @apply font-quicksand text-xl;
+  @apply font-quicksand text-xl text-[#404040];
 }
 
 .label {
@@ -54,9 +54,13 @@
 }
 
 .container5 {
-  @apply flex items-center justify-center mt-4 rounded-md px-8 py-2;
+  @apply flex items-center justify-center mt-4 font-quicksand;
 }
 
 .submitBtn {
-  @apply font-bold w-16 bg-white;
+  @apply flex font-bold w-24 bg-white opacity-50 hover:opacity-100 px-4 py-2 rounded-3xl;
+}
+
+.buttons {
+  @apply flex justify-center mt-6;
 }
